--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "email-validator>=2.2.0",
+    "flask-login>=0.6.3",
     "flask>=3.1.0",
     "flask-sqlalchemy>=3.1.1",
     "gensim>=4.3.3",
@@ -17,4 +18,6 @@ dependencies = [
     "tldextract>=5.1.3",
     "trafilatura>=2.0.0",
     "validators>=0.34.0",
+    "flask-wtf>=1.2.2",
+    "sqlalchemy>=2.0.38",
 ]
